draft logic reworked,