@@ -1,12 +1,16 @@
 package org.nicolie.towersforpgm.commands;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
+import org.nicolie.towersforpgm.MatchManager;
 import org.nicolie.towersforpgm.TowersForPGM;
 import org.nicolie.towersforpgm.database.StatsManager;
 import org.nicolie.towersforpgm.utils.ConfigManager;
@@ -14,9 +18,11 @@ import org.nicolie.towersforpgm.utils.SendMessage;
 
 public class TopCommand implements CommandExecutor, TabCompleter {
     private final TowersForPGM plugin;
+    private final MatchManager matchManager;
 
-    public TopCommand(TowersForPGM plugin) {
+    public TopCommand(TowersForPGM plugin, MatchManager matchManager) {
         this.plugin = plugin;
+        this.matchManager = matchManager;
     }
 
     @Override
@@ -50,7 +56,7 @@ public class TopCommand implements CommandExecutor, TabCompleter {
                 return true;
             }
         }
-        String table = (args.length == 3) ? args[2] : ConfigManager.getTableForMap(plugin.getCurrentMap());
+        String table = (args.length == 3) ? args[2] : ConfigManager.getTableForMap(matchManager.getMatch().getMap().getName());
         if (!ConfigManager.getTables().contains(table)) {
             SendMessage.sendToPlayer(player, plugin.getPluginMessage("stats.tableNotFound"));
             return true;
@@ -62,20 +68,20 @@ public class TopCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (args.length == 1) {
-            return filterSuggestions(args[0], List.of("kills", "deaths", "points", "wins", "games"));
+            return filterSuggestions(args[0], Arrays.asList("kills", "deaths", "assists", "points", "wins", "games"));
         }
         if (args.length == 2) {
-            return List.of("1", "2", "3", "4", "5", "6", "7", "8", "9", "10"); // Sin filtro
+            return Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "9", "10"); // Sin filtro
         }
         if (args.length == 3) {
             return filterSuggestions(args[2], ConfigManager.getTables());
         }
-        return List.of();
+        return Collections.emptyList();
     }
 
     private List<String> filterSuggestions(String input, List<String> options) {
         return options.stream()
                 .filter(option -> option.toLowerCase().startsWith(input.toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
